@@ -7,6 +7,10 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Add support for boolean truthiness constraints (`x`, `not x`) in inference.
+
+  Closes pylint-dev/pylint#9515
+
 * Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.
 
   Closes pylint-dev/pylint#10525
